--- a/finalPage.html
+++ b/finalPage.html
@@ -154,6 +154,7 @@
       .email-container {
         margin: 20px 0;
         text-align: center;
+        animation: fadeIn 2s ease-in-out;
       }
 
       .email-container input {
