--- a/summary.html
+++ b/summary.html
@@ -110,7 +110,7 @@
     </div>
     <script>
       // Fetch data from local storage
-      const storedData = localStorage.getItem("exerciseCardData");
+      const storedData = localStorage.getItem("workoutSummary");
       const cardData = storedData ? JSON.parse(storedData) : [];
 
       const cardContainer = document.getElementById("card-container");
