Fixed conflicts on final page

--- a/finalPage.html
+++ b/finalPage.html
@@ -219,32 +219,7 @@
       function sendEmail() {
         const userEmail = document.getElementById("email").value;
 
-
         if (!userEmail) {
-        // Check if the email field is not empty
-        if (userEmail) {
-          const templateParams = {
-            name: "Aidan", // Ensure this matches the template placeholder
-            title: "Beast", // Ensure this matches the template placeholder
-            email: userEmail, // Ensure this matches the template placeholder
-          };
-
-          // Send the email using EmailJS
-          emailjs
-            .send("service_nm5iuoq", "template_g6k5ann", templateParams)
-            .then(
-              function (response) {
-                //alert("Email sent successfully!");
-                window.location.href = "emailConf.html";
-              },
-              function (error) {
-                alert(
-                  "Failed to send email. Please try again. Error: " +
-                    JSON.stringify(error)
-                );
-              }
-            );
-        } else {
           alert("Please enter a valid email address.");
           return;
         }
@@ -272,7 +247,7 @@
         });
 
         const templateParams = {
-          name: "Athlete", // Change or personalize if desired
+          name: "Athlete", // or personalize with user input if desired
           email: userEmail,
           date: today,
           summary: workoutText,
@@ -282,7 +257,7 @@
           .send("service_nm5iuoq", "template_g6k5ann", templateParams)
           .then(
             function (response) {
-              alert("Email sent successfully!");
+              window.location.href = "emailConf.html";
             },
             function (error) {
               alert(
