--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/x-icon" href="/images/iconImage.jpg" />
 
-    <title>Loyola Fitness</title>
+    <title>HoundFit</title>
   </head>
   <body>
     <!-- Question Container -->
