--- a/workout.html
+++ b/workout.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Loyola Fitness</title>
+    <title>HoundFit</title>
     <link rel="stylesheet" href="workout.css" />
   </head>
   <body>
