--- a/emailConf.html
+++ b/emailConf.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HoundFit</title>
+    <link rel="icon" type="image/x-icon" href="/images/iconImage.jpg" />
     <style>
       body {
         background-color: rgb(40, 40, 40);
