--- a/workout.html
+++ b/workout.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HoundFit</title>
     <link rel="stylesheet" href="workout.css" />
-    <link rel="icon" type="image/x-icon" href="/images/iconImage.jpg" />
+    <link rel="icon" type="image/x-icon" href="/images/iconImage.png" />
   </head>
   <body>
     <div id="main-body" class="full-width">
